@@ -1,8 +1,7 @@
 package com.rookies3.MySpringbootLab.service;
 
 import com.rookies3.MySpringbootLab.controller.dto.BookDTO;
-import com.rookies3.MySpringbootLab.controller.dto.BookDetailPatchRequest;
-import com.rookies3.MySpringbootLab.controller.dto.PatchRequest;
+import com.rookies3.MySpringbootLab.controller.dto.BookDTO.BookDetailDTO;
 import com.rookies3.MySpringbootLab.entity.Book;
 import com.rookies3.MySpringbootLab.entity.BookDetail;
 import com.rookies3.MySpringbootLab.exception.BusinessException;
@@ -11,12 +10,10 @@ import com.rookies3.MySpringbootLab.repository.BookDetailRepository;
 import com.rookies3.MySpringbootLab.repository.BookRepository;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -27,10 +24,9 @@ public class BookService {
     private final BookDetailRepository bookDetailRepository;
 
     public List<BookDTO.Response> getAllBooks() {
-        return bookRepository.findAll()
-                .stream()
+        return bookRepository.findAll().stream()
                 .map(BookDTO.Response::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public BookDTO.Response getBookById(Long id) {
@@ -46,27 +42,23 @@ public class BookService {
     }
 
     public List<BookDTO.Response> getBooksByAuthor(String author) {
-        return bookRepository.findByAuthorContainingIgnoreCase(author)
-                .stream()
+        return bookRepository.findByAuthorContainingIgnoreCase(author).stream()
                 .map(BookDTO.Response::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<BookDTO.Response> getBooksByTitle(String title) {
-        return bookRepository.findByTitleContainingIgnoreCase(title)
-                .stream()
+        return bookRepository.findByTitleContainingIgnoreCase(title).stream()
                 .map(BookDTO.Response::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
     public BookDTO.Response createBook(BookDTO.Request request) {
-        // Validate ISBN is not already in use
         if (bookRepository.existsByIsbn(request.getIsbn())) {
             throw new BusinessException(ErrorCode.ISBN_DUPLICATE, request.getIsbn());
         }
 
-        // Create book entity
         Book book = Book.builder()
                 .title(request.getTitle())
                 .author(request.getAuthor())
@@ -75,68 +67,57 @@ public class BookService {
                 .publishDate(request.getPublishDate())
                 .build();
 
-        // Create book detail if provided
-        if (request.getDetailRequest() != null) {
+        BookDetailDTO detailDto = request.getDetailRequest();
+        if (detailDto != null) {
             BookDetail bookDetail = BookDetail.builder()
-                    .description(request.getDetailRequest().getDescription())
-                    .language(request.getDetailRequest().getLanguage())
-                    .pageCount(request.getDetailRequest().getPageCount())
-                    .publisher(request.getDetailRequest().getPublisher())
-                    .coverImageUrl(request.getDetailRequest().getCoverImageUrl())
-                    .edition(request.getDetailRequest().getEdition())
+                    .description(detailDto.getDescription())
+                    .language(detailDto.getLanguage())
+                    .pageCount(detailDto.getPageCount())
+                    .publisher(detailDto.getPublisher())
+                    .coverImageUrl(detailDto.getCoverImageUrl())
+                    .edition(detailDto.getEdition())
                     .book(book)
                     .build();
-
             book.setBookDetail(bookDetail);
         }
 
-        // Save and return the book
-        Book savedBook = bookRepository.save(book);
-        return BookDTO.Response.fromEntity(savedBook);
+        return BookDTO.Response.fromEntity(bookRepository.save(book));
     }
 
     @Transactional
     public BookDTO.Response updateBook(Long id, BookDTO.Request request) {
-        // Find the book
         Book book = bookRepository.findById(id)
                 .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "id", id));
 
-        // Check if another book already has the ISBN
         if (!book.getIsbn().equals(request.getIsbn()) &&
                 bookRepository.existsByIsbn(request.getIsbn())) {
             throw new BusinessException(ErrorCode.ISBN_DUPLICATE, request.getIsbn());
         }
 
-        // Update book basic info
         book.setTitle(request.getTitle());
         book.setAuthor(request.getAuthor());
         book.setIsbn(request.getIsbn());
         book.setPrice(request.getPrice());
         book.setPublishDate(request.getPublishDate());
 
-        // Update book detail if provided
-        if (request.getDetailRequest() != null) {
+        BookDetailDTO detailDto = request.getDetailRequest();
+        if (detailDto != null) {
             BookDetail bookDetail = book.getBookDetail();
-
-            // Create new detail if not exists
             if (bookDetail == null) {
                 bookDetail = new BookDetail();
                 bookDetail.setBook(book);
                 book.setBookDetail(bookDetail);
             }
 
-            // Update detail fields
-            bookDetail.setDescription(request.getDetailRequest().getDescription());
-            bookDetail.setLanguage(request.getDetailRequest().getLanguage());
-            bookDetail.setPageCount(request.getDetailRequest().getPageCount());
-            bookDetail.setPublisher(request.getDetailRequest().getPublisher());
-            bookDetail.setCoverImageUrl(request.getDetailRequest().getCoverImageUrl());
-            bookDetail.setEdition(request.getDetailRequest().getEdition());
+            bookDetail.setDescription(detailDto.getDescription());
+            bookDetail.setLanguage(detailDto.getLanguage());
+            bookDetail.setPageCount(detailDto.getPageCount());
+            bookDetail.setPublisher(detailDto.getPublisher());
+            bookDetail.setCoverImageUrl(detailDto.getCoverImageUrl());
+            bookDetail.setEdition(detailDto.getEdition());
         }
 
-        // Save and return updated book
-        Book updatedBook = bookRepository.save(book);
-        return BookDTO.Response.fromEntity(updatedBook);
+        return BookDTO.Response.fromEntity(bookRepository.save(book));
     }
 
     @Transactional
@@ -146,48 +127,4 @@ public class BookService {
         }
         bookRepository.deleteById(id);
     }
-    @Transactional
-    public BookDTO.Response patchBook(Long id, PatchRequest request) {
-        Book book = bookRepository.findByIdWithBookDetail(id)
-                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "id", id));
-
-        // 🔹 Book 필드들 일부 수정
-        if (request.getTitle() != null) {
-            book.setTitle(request.getTitle());
-        }
-
-        if (request.getAuthor() != null) {
-            book.setAuthor(request.getAuthor());
-        }
-
-        if (request.getPrice() != null) {
-            book.setPrice(request.getPrice());
-        }
-
-        if (request.getPublishDate() != null) {
-            book.setPublishDate(request.getPublishDate());
-        }
-
-        if (request.getIsbn() != null && !request.getIsbn().equals(book.getIsbn())) {
-            if (bookRepository.existsByIsbn(request.getIsbn())) {
-                throw new BusinessException(ErrorCode.ISBN_DUPLICATE, request.getIsbn());
-            }
-            book.setIsbn(request.getIsbn());
-        }
-
-        // 🔹 BookDetail 필드 일부 수정
-        BookDetailPatchRequest detailReq = request.getDetailRequest();
-        if (detailReq != null) {
-            BookDetail detail = book.getBookDetail();
-            if (detailReq.getDescription() != null) detail.setDescription(detailReq.getDescription());
-            if (detailReq.getLanguage() != null) detail.setLanguage(detailReq.getLanguage());
-            if (detailReq.getPageCount() != null) detail.setPageCount(detailReq.getPageCount());
-            if (detailReq.getPublisher() != null) detail.setPublisher(detailReq.getPublisher());
-            if (detailReq.getCoverImageUrl() != null) detail.setCoverImageUrl(detailReq.getCoverImageUrl());
-            if (detailReq.getEdition() != null) detail.setEdition(detailReq.getEdition());
-        }
-
-        return BookDTO.Response.fromEntity(book);
-    }
-
 }
